--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -112,93 +112,35 @@ button {
 }
 
 /* Spinner CSS */
-.spinner{
-  height: 350px;
-  width: 350px;
-  position: relative;
-  animation: spin 1.5s infinite;
+.spinner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(231, 223, 223);
+  opacity: 0.5;
+  transition: opacity 0.75s visibility 0.75s;
 }
-@keyframes spin{
-  100%{
-      transform: rotate(360deg);
-  }
+
+.spinner-hidden {
+  opacity: 0;
+  visibility: hidden;
 }
-.spinner>div:nth-child(1){
-  height: 75px;
+
+.spinner::after {
+  content: "";
   width: 75px;
-  background-image: linear-gradient(
-      45deg,
-      #f7d000,
-      #e6970e
-  );
-  position: absolute;
-  top: 100px;
-  left: 100px;
-  box-shadow: 0 0 3px #f7d000;
-  border-radius: 50%;
-  animation: move1 1.5s infinite;
-}
-@keyframes move1{
-  50%{
-      transform: translate(-30px,-30px) scale(0.3);
-  }
-}
-.spinner>div:nth-child(2){
-  height: 45px;
-  width: 45px;
-  background-image: linear-gradient(
-      45deg,
-      #00d7f7,
-      #04c0f5
-  );
-  position: absolute;
-  top: 105px;
-  right: 110px;
-  box-shadow:  0 0 2px #00d7f7;
-  border-radius: 50%;
-  animation: move2 1.5s infinite;
-}
-@keyframes move2{
-  50%{
-      transform: translate(15px,-20px) scale(0.55);
-  }
-}
-.spinner>div:nth-child(3){
   height: 75px;
-  width: 75px;
-  background-image: linear-gradient(
-      45deg,
-      #f60180,
-      #f7014f
-  );
-  position: absolute;
-  bottom: 100px;
-  right: 100px;
-  box-shadow: 0 0 3px #f60180;
+  border: 15px solid #dddddd;
+  border-top-color: teal;
   border-radius: 50%;
-  animation: move3 1.5s infinite;
+  animation: loading 0.75s ease infinite;
 }
-@keyframes move3{
-  50%{
-      transform: translate(30px,30px) scale(0.3);
-  }
-}
-.spinner>div:nth-child(4){
-  height: 45px;
-  width: 45px;
-  background-image: linear-gradient(
-      45deg,
-      #da00f7,
-      #b501f6
-  );
-  position: absolute;
-  bottom: 105px;
-  left: 110px;
-  border-radius: 50%;
-  animation: move4 1.5s infinite;
-}
-@keyframes move4{
-  50%{
-      transform: translate(-15px,20px) scale(0.55);
-  }
+@keyframes loading {
+  from { transform: rotate(0turn); }
+  to { transform: rotate(1turn); }
 }
